--- a/sass/globals/_boilerlate.sass
+++ b/sass/globals/_boilerlate.sass
@@ -1,11 +1,15 @@
 @use 'functions' as *
+
 *
   font-size: 100%
   box-sizing: border-box
 
 body
   font-family: var(--font-inter)
+  background: var(--dark-bg)
+  color: var(--dark-text2)
 
 .container
   padding: 0 rem(25)
   max-width: rem(1100)
+  margin: 0 auto
