--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,3 +2,6 @@
 @import 'globals/colors'
 @import 'globals/fonts'
 @import 'globals/functions'
+
+@import 'components/header'
+@import 'components/toggle'
