--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   --toggle-bg-dark: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
   --dark-bg: hsl(230, 17%, 14%);
   --dark-top-bg: hsl(232, 19%, 15%);
-  --card-bg: hsl(228, 28%, 20%);
+  --dark-card-bg: hsl(228, 28%, 20%);
   --dark-text1: hsl(228, 34%, 66%);
   --dark-text2: hsl(0, 0%, 100%);
   --toggle-bg-light: hsl(230, 22%, 74%);
@@ -44,8 +44,117 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1.875rem;
+  margin-bottom: 2.5rem;
 }
 .header-title__name {
   font-size: 1.75rem;
   font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+.header-title__total-followers {
+  color: var(--toggle-bg-light);
+}
+
+.cards-inline {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 0.3125rem;
+  z-index: 10;
+}
+.cards-inline--facebook {
+  background: var(--facebook);
+}
+.cards-inline--twitter {
+  background: var(--twitter);
+}
+.cards-inline--instagram {
+  background: var(--instagram);
+}
+.cards-inline--youtube {
+  background: var(--brightred);
+}
+.cards-top {
+  display: flex;
+  justify-content: space-between;
+}
+.cards-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 15rem;
+  height: 13.5rem;
+  background-color: var(--dark-card-bg);
+  border-radius: 0.375rem;
+  padding-top: 2.1875rem;
+  padding-button: 1.5625rem;
+  overflow: hidden;
+}
+.cards-item:hover {
+  filter: brightness(150%);
+}
+.cards-item__info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+.cards-item__icon {
+  margin-right: 0.625rem;
+}
+.cards-item__nickname {
+  color: var(--dark-text1);
+  font-size: 0.75rem;
+  font-weight: bold;
+}
+.cards-item__count {
+  color: var(--dark-text2);
+  font-size: 3.875rem;
+  font-weight: bold;
+  margin-bottom: 0.3125rem;
+}
+.cards-item__followers {
+  color: var(--dark-text1);
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 0.34375rem;
+  margin-bottom: 1.875rem;
+}
+.cards-item__today {
+  display: flex;
+  align-items: center;
+}
+.cards-item__today-icon {
+  margin-right: 0.3125rem;
+}
+.cards-item__today-text {
+  font-size: 0.75rem;
+  color: var(--limegreen);
+}
+.cards-today {
+  display: flex;
+  justify-content: space-between;
+  width: 15rem;
+  height: 10.625rem;
+  background-color: var(--dark-card-bg);
+  border-radius: 0.375rem;
+  padding: 2.1875rem 1.6875rem;
+  overflow: hidden;
+}
+.cards-today:hover {
+  filter: brightness(150%);
+}
+.cards-today__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.cards-today__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
