--- a/sass/globals/_colors.sass
+++ b/sass/globals/_colors.sass
@@ -9,7 +9,7 @@
   --toggle-bg-dark: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%))
   --dark-bg: hsl(230, 17%, 14%)
   --dark-top-bg: hsl(232, 19%, 15%)
-  --card-bg: hsl(228, 28%, 20%)
+  --dark-card-bg: hsl(228, 28%, 20%)
   --dark-text1: hsl(228, 34%, 66%)
   --dark-text2: hsl(0, 0%, 100%)
   --toggle-bg-light: hsl(230, 22%, 74%)
