--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ body {
 .cards-top {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 3.75rem;
 }
 .cards-item {
   position: relative;
@@ -135,15 +136,26 @@ body {
   font-size: 0.75rem;
   color: var(--limegreen);
 }
+.cards__title-today {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1.875rem;
+}
+.cards-diff {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 .cards-today {
   display: flex;
   justify-content: space-between;
   width: 15rem;
-  height: 10.625rem;
+  height: 9.375rem;
   background-color: var(--dark-card-bg);
   border-radius: 0.375rem;
   padding: 2.1875rem 1.6875rem;
   overflow: hidden;
+  margin-bottom: 1.875rem;
 }
 .cards-today:hover {
   filter: brightness(150%);
@@ -153,8 +165,32 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.cards-today__type {
+  color: var(--dark-text1);
+}
+.cards-today__count {
+  color: var(--dark-text2);
+  font-size: 2.1875rem;
+  font-weight: bold;
+}
 .cards-today__block {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+}
+.cards-today__statistic {
+  display: flex;
+  align-items: center;
+}
+.cards-today__statistic-icon {
+  margin-right: 0.3125rem;
+}
+.cards-today__statistic-text {
+  color: var(--limegreen);
+  font-size: 0.75rem;
+}
+
+.arrow-down {
+  color: var(--brightred);
 }/*# sourceMappingURL=style.css.map */
