--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,55 @@ body {
   color: var(--toggle-bg-light);
 }
 
+.toggle {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.75rem;
+}
+.toggle__wrapper {
+  position: relative;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  height: 1.5rem;
+}
+.toggle__input {
+  opacity: 0;
+}
+.toggle__background {
+  position: absolute;
+  top: 0;
+  display: block;
+  border-radius: 0.75rem;
+  overflow: hidden;
+  width: 3rem;
+  height: 100%;
+  background: var(--toggle-bg-dark);
+}
+.toggle__button {
+  position: absolute;
+  top: 0.1875rem;
+  left: 0.1875rem;
+  right: 100%;
+  width: 1.125rem;
+  height: 1.125rem;
+  border-radius: 50%;
+  background-color: var(--dark-bg);
+}
+
+label[for=dark] {
+  grid-column: 1/2;
+  justify-self: end;
+}
+label[for=system] {
+  grid-column: 1/4;
+  grid-row: 2/3;
+  justify-self: center;
+}
+label[for=light] {
+  grid-column: 3/4;
+  justify-self: start;
+}
+
 .cards-inline {
   display: block;
   position: absolute;
