--- a/sass/components/_toggle.sass
+++ b/sass/components/_toggle.sass
@@ -1,1 +1,44 @@
 @use '../globals/functions' as *
+// https://codepen.io/SaraSoueidan/pen/jpBbrq?editors=1100
+
+.toggle
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
+  gap: rem(12)
+  &__wrapper
+    position: relative
+    grid-column: 2 / 3
+    grid-row: 1 / 2
+    height: rem(24)
+  &__input
+    opacity: 0 // прозрачность
+  &__background
+    position: absolute
+    top: 0
+    display: block
+    border-radius: rem(12)
+    overflow: hidden
+    width: rem(48)
+    height: 100%
+    background: var(--toggle-bg-dark)
+  &__button
+    position: absolute
+    top: rem(3)
+    left: rem(3)
+    right: 100%
+    width: rem(18)
+    height: rem(18)
+    border-radius: 50%
+    background-color: var(--dark-bg)
+
+label
+  &[for='dark']
+    grid-column: 1 / 2
+    justify-self: end
+  &[for='system']
+    grid-column: 1 / 4
+    grid-row: 2 / 3
+    justify-self: center
+  &[for='light']
+    grid-column: 3 / 4
+    justify-self: start
