Добавил стелей к кнопке toggle

--- a/sass/components/_cards.sass
+++ b/sass/components/_cards.sass
@@ -64,7 +64,10 @@
         margin-right: rem(5)
       &-text
         font-size: rem(12)
-        color: var(--limegreen)
+        &--up
+          color: var(--limegreen)
+        &--down
+          color: var(--brightred)
   &__title-today
     font-size: rem(24)
     font-weight: bold
@@ -106,8 +109,8 @@
       &-icon
         margin-right: rem(5)
       &-text
-        color: var(--limegreen)
         font-size: rem(12)
-
-.arrow-down
-  color: var(--brightred)
+        &--up
+          color: var(--limegreen)
+        &--down
+          color: var(--brightred)
