--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,14 @@ body {
 }
 .toggle__input {
   opacity: 0;
+  z-index: 1;
+  margin: -0.125rem;
+  position: relative;
+  width: 1.1875rem;
+  height: 1.625rem;
+}
+.toggle__input:focus ~ .toggle__button {
+  border: 0.125rem solid var(--dark-text2);
 }
 .toggle__background {
   position: absolute;
@@ -76,7 +84,7 @@ body {
   display: block;
   border-radius: 0.75rem;
   overflow: hidden;
-  width: 3rem;
+  width: 100%;
   height: 100%;
   background: var(--toggle-bg-dark);
 }
@@ -89,8 +97,12 @@ body {
   height: 1.125rem;
   border-radius: 50%;
   background-color: var(--dark-bg);
+  transition: all 150ms ease-in-out;
 }
 
+label {
+  cursor: pointer;
+}
 label[for=dark] {
   grid-column: 1/2;
   justify-self: end;
@@ -103,6 +115,16 @@ label[for=system] {
 label[for=light] {
   grid-column: 3/4;
   justify-self: start;
+}
+
+#light:checked ~ .toggle__button {
+  right: 0.1875rem;
+  left: calc(100% - 21px);
+}
+
+#system:checked ~ .toggle__button {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .cards-inline {
@@ -183,7 +205,12 @@ label[for=light] {
 }
 .cards-item__today-text {
   font-size: 0.75rem;
+}
+.cards-item__today-text--up {
   color: var(--limegreen);
+}
+.cards-item__today-text--down {
+  color: var(--brightred);
 }
 .cards__title-today {
   font-size: 1.5rem;
@@ -236,10 +263,11 @@ label[for=light] {
   margin-right: 0.3125rem;
 }
 .cards-today__statistic-text {
-  color: var(--limegreen);
   font-size: 0.75rem;
 }
-
-.arrow-down {
+.cards-today__statistic-text--up {
+  color: var(--limegreen);
+}
+.cards-today__statistic-text--down {
   color: var(--brightred);
 }/*# sourceMappingURL=style.css.map */
