--- a/sass/components/_toggle.sass
+++ b/sass/components/_toggle.sass
@@ -10,17 +10,27 @@
     grid-column: 2 / 3
     grid-row: 1 / 2
     height: rem(24)
+
   &__input
     opacity: 0 // прозрачность
+    z-index: 1
+    margin: rem(-2)
+    position: relative
+    width: rem(19)
+    height: rem(26)
+    &:focus ~ .toggle__button
+      border: rem(2) solid var(--dark-text2)
+
   &__background
     position: absolute
     top: 0
     display: block
     border-radius: rem(12)
     overflow: hidden
-    width: rem(48)
+    width: 100%
     height: 100%
     background: var(--toggle-bg-dark)
+
   &__button
     position: absolute
     top: rem(3)
@@ -30,8 +40,10 @@
     height: rem(18)
     border-radius: 50%
     background-color: var(--dark-bg)
+    transition: all 150ms ease-in-out
 
 label
+  cursor: pointer
   &[for='dark']
     grid-column: 1 / 2
     justify-self: end
@@ -42,3 +54,11 @@ label
   &[for='light']
     grid-column: 3 / 4
     justify-self: start
+
+#light:checked ~ .toggle__button
+  right: rem(3)
+  left: calc( 100% - 21px )
+
+#system:checked ~ .toggle__button
+  left: 50%
+  transform: translateX(-50%)
