--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -26,4 +26,6 @@
       font-weight: bold
       margin-bottom: rem(8)
     &__total-followers
-      color: var(--toggle-bg-light)
+      color: var(--text-followers)
+legend
+  color: var(--text-mode)
