--- a/sass/globals/_media.sass
+++ b/sass/globals/_media.sass
@@ -30,14 +30,12 @@
       margin-bottom: rem(20)
     &-toggle
       align-self: end
-  .toggle
-    &__wrapper
-      width: rem(54)
   .cards
     &-top
-      &--mb-2
-        margin-bottom: rem(20)
+      margin-bottom: rem(50)
     &-item
       flex-basis: 100%
+      &__count
+        font-size: rem(55)
     &-today
       flex-basis: 100%
