--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: var(--font-inter);
-  background: var(--dark-bg);
-  color: var(--dark-text2);
+  background: var(--background);
+  color: var(--text-two);
 }
 
 .container {
@@ -29,12 +29,60 @@ body {
   --dark-card-bg: hsl(228, 28%, 20%);
   --dark-text1: hsl(228, 34%, 66%);
   --dark-text2: hsl(0, 0%, 100%);
+  --dark-brightness: 150%;
   --toggle-bg-light: hsl(230, 22%, 74%);
   --light-bg: hsl(0, 0%, 100%);
   --light-top-bg: hsl(225, 100%, 98%);
   --light-card-bg: hsl(227, 47%, 96%);
   --light-text1: hsl(228, 12%, 44%);
   --light-text2: hsl(230, 17%, 14%);
+  --light-brightness: 93%;
+  --background: var(--dark-bg);
+  --top-bg: var(--dark-top-bg);
+  --card-bg: var(--dark-card-bg);
+  --text-one: var(--dark-text1);
+  --text-two: var(--dark-text2);
+  --text-followers: var(--toggle-bg-light);
+  --text-mode: var(--dark-text2);
+  --brightness: var(--dark-brightness);
+  --toggle-bg: var(--toggle-bg-dark);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background: var(--light-bg);
+    --top-bg: var(--light-top-bg);
+    --card-bg: var(--light-card-bg);
+    --text-one: var(--light-text1);
+    --text-two: var(--light-text2);
+    --brightness: var(--light-brightness);
+    --toggle-bg: var(--toggle-bg-light);
+    --text-followers: var(--light-text1);
+    --text-mode: var(--light-text1);
+  }
+}
+body.dark {
+  --background: var(--dark-bg);
+  --top-bg: var(--dark-top-bg);
+  --card-bg: var(--dark-card-bg);
+  --text-one: var(--dark-text1);
+  --text-two: var(--dark-text2);
+  --brightness: var(--dark-brightness);
+  --toggle-bg: var(--toggle-bg-dark);
+  --text-followers: var(--toggle-bg-light);
+  --text-mode: var(--dark-text2);
+}
+
+body.light {
+  --background: var(--light-bg);
+  --top-bg: var(--light-top-bg);
+  --card-bg: var(--light-card-bg);
+  --text-one: var(--light-text1);
+  --text-two: var(--light-text2);
+  --brightness: var(--light-brightness);
+  --toggle-bg: var(--toggle-bg-light);
+  --text-followers: var(--light-text1);
+  --text-mode: var(--light-text1);
 }
 
 :root {
@@ -53,19 +101,22 @@ body {
   margin-bottom: 0.5rem;
 }
 .header-title__total-followers {
-  color: var(--toggle-bg-light);
+  color: var(--text-followers);
+}
+
+legend {
+  color: var(--text-mode);
 }
 
 .toggle {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 8.75rem;
 }
 .toggle__wrapper {
   position: relative;
-  grid-column: 2/3;
-  grid-row: 1/2;
-  width: 4rem;
+  width: 3rem;
   height: 1.5rem;
 }
 .toggle__input {
@@ -73,11 +124,11 @@ body {
   z-index: 1;
   margin: -0.125rem;
   position: relative;
-  width: 1.1875rem;
+  width: 1.609375rem;
   height: 1.625rem;
 }
 .toggle__input:focus ~ .toggle__button {
-  border: 0.125rem solid var(--dark-text2);
+  border: 0.125rem solid var(--text-two);
 }
 .toggle__background {
   position: absolute;
@@ -87,7 +138,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background: var(--toggle-bg-dark);
+  background: var(--toggle-bg);
 }
 .toggle__button {
   position: absolute;
@@ -97,35 +148,23 @@ body {
   width: 1.125rem;
   height: 1.125rem;
   border-radius: 50%;
-  background-color: var(--dark-bg);
+  background-color: var(--background);
   transition: all 150ms ease-in-out;
 }
 
-label {
+legend {
   cursor: pointer;
 }
-label[for=dark] {
-  grid-column: 1/2;
+legend[for=dark] {
   justify-self: end;
 }
-label[for=system] {
-  grid-column: 1/4;
-  grid-row: 2/3;
-  justify-self: center;
-}
-label[for=light] {
-  grid-column: 3/4;
+legend[for=light] {
   justify-self: start;
 }
 
 #light:checked ~ .toggle__button {
   right: 0.1875rem;
   left: calc(100% - 21px);
-}
-
-#system:checked ~ .toggle__button {
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .cards-inline {
@@ -162,14 +201,14 @@ label[for=light] {
   align-items: center;
   width: 15rem;
   height: 13.5rem;
-  background-color: var(--dark-card-bg);
+  background-color: var(--card-bg);
   border-radius: 0.375rem;
   padding-top: 2.1875rem;
   padding-button: 1.5625rem;
   overflow: hidden;
 }
 .cards-item:hover {
-  filter: brightness(150%);
+  filter: brightness(var(--brightness));
 }
 .cards-item__info {
   display: flex;
@@ -180,18 +219,18 @@ label[for=light] {
   margin-right: 0.625rem;
 }
 .cards-item__nickname {
-  color: var(--dark-text1);
+  color: var(--text-one);
   font-size: 0.75rem;
   font-weight: bold;
 }
 .cards-item__count {
-  color: var(--dark-text2);
+  color: var(--text-two);
   font-size: 3.875rem;
   font-weight: bold;
   margin-bottom: 0.3125rem;
 }
 .cards-item__followers {
-  color: var(--dark-text1);
+  color: var(--text-one);
   font-size: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 0.34375rem;
@@ -228,14 +267,14 @@ label[for=light] {
   justify-content: space-between;
   width: 15rem;
   height: 9.375rem;
-  background-color: var(--dark-card-bg);
+  background-color: var(--card-bg);
   border-radius: 0.375rem;
   padding: 2.1875rem 1.6875rem;
   overflow: hidden;
   margin-bottom: 1.875rem;
 }
 .cards-today:hover {
-  filter: brightness(150%);
+  filter: brightness(var(--brightness));
 }
 .cards-today__info {
   display: flex;
@@ -243,10 +282,10 @@ label[for=light] {
   justify-content: space-between;
 }
 .cards-today__type {
-  color: var(--dark-text1);
+  color: var(--text-one);
 }
 .cards-today__count {
-  color: var(--dark-text2);
+  color: var(--text-two);
   font-size: 2.1875rem;
   font-weight: bold;
 }
@@ -311,14 +350,14 @@ label[for=light] {
   .header-toggle {
     align-self: end;
   }
-  .toggle__wrapper {
-    width: 3.375rem;
-  }
-  .cards-top--mb-2 {
-    margin-bottom: 1.25rem;
+  .cards-top {
+    margin-bottom: 3.125rem;
   }
   .cards-item {
     flex-basis: 100%;
+  }
+  .cards-item__count {
+    font-size: 3.4375rem;
   }
   .cards-today {
     flex-basis: 100%;
