--- a/sass/components/_toggle.sass
+++ b/sass/components/_toggle.sass
@@ -2,14 +2,13 @@
 // https://codepen.io/SaraSoueidan/pen/jpBbrq?editors=1100
 
 .toggle
-  display: grid
-  grid-template-columns: repeat(3, 1fr)
-  gap: rem(12)
+  display: flex
+  justify-content: space-between
+  align-items: center
+  width: rem(140)
   &__wrapper
     position: relative
-    grid-column: 2 / 3
-    grid-row: 1 / 2
-    width: rem(64)
+    width: rem(48)
     height: rem(24)
 
   &__input
@@ -17,10 +16,10 @@
     z-index: 1
     margin: rem(-2)
     position: relative
-    width: rem(19)
+    width: rem(25.75)
     height: rem(26)
     &:focus ~ .toggle__button
-      border: rem(2) solid var(--dark-text2)
+      border: rem(2) solid var(--text-two)
 
   &__background
     position: absolute
@@ -30,7 +29,7 @@
     overflow: hidden
     width: 100%
     height: 100%
-    background: var(--toggle-bg-dark)
+    background: var(--toggle-bg)
 
   &__button
     position: absolute
@@ -40,26 +39,16 @@
     width: rem(18)
     height: rem(18)
     border-radius: 50%
-    background-color: var(--dark-bg)
+    background-color: var(--background)
     transition: all 150ms ease-in-out
 
-label
+legend
   cursor: pointer
   &[for='dark']
-    grid-column: 1 / 2
     justify-self: end
-  &[for='system']
-    grid-column: 1 / 4
-    grid-row: 2 / 3
-    justify-self: center
   &[for='light']
-    grid-column: 3 / 4
     justify-self: start
 
 #light:checked ~ .toggle__button
   right: rem(3)
   left: calc( 100% - 21px )
-
-#system:checked ~ .toggle__button
-  left: 50%
-  transform: translateX(-50%)
