--- a/sass/globals/_boilerlate.sass
+++ b/sass/globals/_boilerlate.sass
@@ -6,8 +6,8 @@
 
 body
   font-family: var(--font-inter)
-  background: var(--dark-bg)
-  color: var(--dark-text2)
+  background: var(--background)
+  color: var(--text-two)
 
 .container
   padding: 0 rem(25)
