--- a/sass/globals/_colors.sass
+++ b/sass/globals/_colors.sass
@@ -12,9 +12,55 @@
   --dark-card-bg: hsl(228, 28%, 20%)
   --dark-text1: hsl(228, 34%, 66%)
   --dark-text2: hsl(0, 0%, 100%)
+  --dark-brightness: 150%
   --toggle-bg-light: hsl(230, 22%, 74%)
   --light-bg: hsl(0, 0%, 100%)
   --light-top-bg: hsl(225, 100%, 98%)
   --light-card-bg: hsl(227, 47%, 96%)
   --light-text1: hsl(228, 12%, 44%)
   --light-text2: hsl(230, 17%, 14%)
+  --light-brightness: 93%
+
+  --background: var(--dark-bg)
+  --top-bg: var(--dark-top-bg)
+  --card-bg: var(--dark-card-bg)
+  --text-one: var(--dark-text1)
+  --text-two: var(--dark-text2)
+  --text-followers: var(--toggle-bg-light)
+  --text-mode: var(--dark-text2)
+  --brightness: var(--dark-brightness)
+  --toggle-bg: var(--toggle-bg-dark)
+
+@media (prefers-color-scheme: light)
+  :root
+    --background: var(--light-bg)
+    --top-bg: var(--light-top-bg)
+    --card-bg: var(--light-card-bg)
+    --text-one: var(--light-text1)
+    --text-two: var(--light-text2)
+    --brightness: var(--light-brightness)
+    --toggle-bg: var(--toggle-bg-light)
+    --text-followers: var(--light-text1)
+    --text-mode: var(--light-text1)
+
+body.dark
+  --background: var(--dark-bg)
+  --top-bg: var(--dark-top-bg)
+  --card-bg: var(--dark-card-bg)
+  --text-one: var(--dark-text1)
+  --text-two: var(--dark-text2)
+  --brightness: var(--dark-brightness)
+  --toggle-bg: var(--toggle-bg-dark)
+  --text-followers: var(--toggle-bg-light)
+  --text-mode: var(--dark-text2)
+
+body.light
+  --background: var(--light-bg)
+  --top-bg: var(--light-top-bg)
+  --card-bg: var(--light-card-bg)
+  --text-one: var(--light-text1)
+  --text-two: var(--light-text2)
+  --brightness: var(--light-brightness)
+  --toggle-bg: var(--toggle-bg-light)
+  --text-followers: var(--light-text1)
+  --text-mode: var(--light-text1)
